--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ pytest-playwright==0.5.2
 pyotp==2.9.0
 pillow==10.4.0
 playwright==1.40.0
-asyncssh
-python-dotenv        # если используете .env файлы
+asyncssh==2.14.0
+python-dotenv==1.0.1
